[package]
name = "pollinate"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.6.4", rev = "v0.6.4", features = ["full","signer-mnemonic"] }
alloy-sol-types = "0.8.0"
tokio = { version = "^1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
eyre = "0.6.12"
rpassword = "7.3.1"
clap = { version = "4.5", features = ["derive"] }